--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/themes": "^2.0.0",
     "classnames": "^2.3.2",
     "next": "13.5.6",
     "react": "^18",
@@ -20,7 +21,6 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
-    "daisyui": "^3.9.3",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
